[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hybrid_rag"
version = "0.0.1"
authors = [
  {name = "Milan Kundra", email = "kundra.milan@uk.sika.com"},
]
dependencies = [
  "polars>=1.0.0",
  "numpy==1.26.4",
  "orjson",
  "openai>=1.0.0",
  "pydantic",
  "tiktoken>=0.7.0",
  "beartype>=0.17.0",
  "scikit-learn>=0.21.0",
  "cachetools",
  "sentence_transformers",
  "nltk",
  "tokenizers",
  "scipy>=1.14.0",
  "PyStemmer==2.2.0.1",
  "pydantic>=2.7.0"
]
description = "Package containing useful functions for creating RAG systems, utilising embeddings, TDF-IF and BM25 keyword search."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# [project.urls]
# Homepage = "https://github.com/SikaSIS/hybrid-rag"
# Issues = "https://github.com/SikaSIS/hybrid-rag/issues"
