[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hybrid_rag"
version = "0.0.2"
authors = [
  {name = "Milan Kundra", email = "kundra.milan@uk.sika.com"},
]
dependencies = [
  'beartype>=0.17.0',
  'cachetools',
  'nltk',
  'numpy==1.26.4',
  'openai>=1.0.0',
  'orjson',
  'polars>=1.0.0',
  'pydantic>=2.7.0',
  'PyStemmer==2.2.0.1',
  'scikit-learn>=0.21.0',
  'scipy>=1.14.0',
  'sentence_transformers',
  'tiktoken>=0.7.0',
  'tokenizers',
  'llm_utilities @ git+https://github.com/sikauk-rad/llm-utilities.git@main',
]
description = "Package containing useful functions for creating RAG systems, utilising embeddings, TDF-IF and BM25 keyword search."
readme = "README.md"
requires-python = ">=3.10, <3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# [project.urls]
# Homepage = "https://github.com/SikaSIS/hybrid-rag"
# Issues = "https://github.com/SikaSIS/hybrid-rag/issues"



